--- a/app/backend-api/.env
+++ b/app/backend-api/.env
@@ -17,3 +17,12 @@
 APP_ENV=dev
 APP_SECRET=a5e9081e0b26477b1bedae0a0bd66eb8
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+DATABASE_URL="mysql://root:secret@mysql8-service:3306/todo?serverVersion=8"
+#DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+###< doctrine/doctrine-bundle ###
