--- a/app/backend-api/config/routes.yaml
+++ b/app/backend-api/config/routes.yaml
@@ -1,3 +1,21 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+epic_list:
+    path      : /api/epic/list
+    controller: App\Controller\EpicController::indexAction
+    methods   : [ GET ]
+
+epic_create:
+    path      : /api/epic/add
+    controller: App\Controller\EpicController::createAction
+    methods   : [ POST ]
+
+task_list:
+    path: /api/{id}/task/list
+    controller: App\Controller\TaskController::indexAction
+    methods: [ GET ]
+    requirements:
+        id: '\d+'
+
+task_create:
+    path: /api/task/add
+    controller: App\Controller\TaskController::createAction
+    methods: [ POST ]
