--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,7 @@ version: '3'
 
 networks:
   nginx-php74-mysql8-backend:
+  angularjs-frontend:
 
 services:
 
@@ -13,7 +14,7 @@ services:
       - "8080:80"
     volumes:
       - ./app/backend-api:/var/www/project
-      - ./nginx/default-back.conf:/etc/nginx/conf.d/default-back.conf
+      - ./nginx/default-back.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - php74-service
       - mysql8-service
@@ -44,8 +45,17 @@ services:
     command: --default-authentication-plugin=mysql_native_password --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     restart: always # always restart unless stopped manually
     environment:
-      MYSQL_USER: root
       MYSQL_ROOT_PASSWORD: secret
       MYSQL_PASSWORD: secret
     networks:
       - nginx-php74-mysql8-backend
+
+  # nginx client
+  client:
+    image: nginx
+    ports:
+      - 8000:80
+    volumes:
+      - ./app/frontend:/usr/share/nginx/html
+    networks:
+      - angularjs-frontend
